--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -45,7 +45,9 @@ jobs:
       uses: github/codeql-action/init@v1
       with:
         languages: ${{ matrix.language }}
-        config-file: amitgupta7/codeql-runall-config/codeql-runall.yml@main
+        tools: https://github.com/amitgupta7/demo-codeql-bundle/releases/download/codeql-bundle-20220224-05c2d67/codeql-bundle.tar.gz
+        debug: true
+        #config-file: amitgupta7/codeql-runall-config/codeql-runall.yml@main
 
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
